# f713-control-plane

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: bootstrap.md
src/f713_control_plane/: __init__.py  cli.py  config.py  daemon.py  engine.py  github_auth.py  gitops.py  hermes.py  hermes_commands.py  models.py  notifier.py  store.py
src/f713_control_plane.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tasks/feishu-om-x100b6b64903e08a4b2e61c5282b1f7d/: manifest.yaml
tasks/feishu-om-x100b6b64903e08a4b2e61c5282b1f7d/runtime/: artifacts.json  blocker.md  events.ndjson  state.json
tasks/feishu-om-x100b6b6da9ffc0a0b2976be16e96680/: manifest.yaml
tasks/feishu-om-x100b6b6da9ffc0a0b2976be16e96680/runtime/: events.ndjson  state.json
tasks/feishu-om-x100b6b6dfcad9ca0b15b4415cef7631/: manifest.yaml
tasks/feishu-om-x100b6b6dfcad9ca0b15b4415cef7631/runtime/: artifacts.json  events.ndjson  receipt.md  state.json
tasks/feishu-om-x100b6b7adba7fcb8b163d771f44704e/: manifest.yaml
tasks/feishu-om-x100b6b7adba7fcb8b163d771f44704e/runtime/: artifacts.json  blocker.md  events.ndjson  state.json
tasks/feishu-om-x100b6b7aedf03ca8b1dc6218324f616/: manifest.yaml
tasks/feishu-om-x100b6b7aedf03ca8b1dc6218324f616/runtime/: artifacts.json  blocker.md  events.ndjson  state.json
tasks/test-shell-20260701-170321/: manifest.yaml
tasks/test-shell-20260701-170321/runtime/: artifacts.json  events.ndjson  receipt.md  state.json
templates/: engineering_simple.yaml  research_long.yaml
